--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,50 @@
 body {
+  margin: 0;
+  margin-top: 2rem;
+  background-color: gray;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+  background-color: rgb(210, 204, 204);
+  max-width: 30rem;
+  height: 500px;
+  margin: 0 auto;
+  border: 2px solid black;
+}
+
+/* body {
   background-color: rgb(87, 84, 84);
   font-family: sans-serif;
 }
 
 #container {
-  margin: auto;
+  max-width: 700px;
+  height: 70%;
+  margin: 0 auto;
   margin-top: 5rem;
-  width: 40%;
-  height: 40%;
+}
+
+#info {
+  width: 100%;
+  height: 100%;
   background-color: rgb(31, 62, 88);
   border: 3px solid white;
   border-radius: 5px;
   font-weight: bold;
   color: white;
-  padding: 10px;
+  padding: 2rem;
+  margin: 1rem;
 }
 
-#info {
-  margin: 1rem;
+.text {
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -70,4 +97,4 @@ button {
   height: 1rem;
   border: none;
   border-radius: 5px;
-}
+} */
