--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   margin-top: 2rem;
+  padding: 1rem;
   background-color: gray;
   font-family: "Times New Roman", Times, serif;
 }
@@ -9,8 +10,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 4rem;
   flex-direction: column;
   padding: 2rem;
+  border-radius: 5px;
   background-color: rgb(210, 204, 204);
   max-width: 30rem;
   height: 500px;
@@ -18,6 +21,43 @@ body {
   border: 2px solid black;
 }
 
+.pw-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.btns {
+  display: flex;
+  gap: 1rem;
+}
+
+button {
+  box-sizing: border-box;
+  padding: 0.5rem;
+  width: 8.8rem;
+  background-color: rgb(105, 171, 105);
+  border-color: white;
+}
+
+.generatedpw {
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: black;
+  box-sizing: border-box;
+}
+
+#generatedpasswordone-el {
+  width: 8rem;
+  height: 2rem;
+  margin: 0.5rem auto;
+  text-align: center;
+  color: white;
+  word-wrap: break-word;
+}
 /* body {
   background-color: rgb(87, 84, 84);
   font-family: sans-serif;
